2008-09-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/channel.c (ImportImageChannelsMasked): New function to
	import all the channels from an image except for the channels
	specified.
	* magick/effect.c (AddNoiseImageChannel): New function to add
	noise to an image channel.
	(BlurImageChannel): New function to blur one image channel.
	(GaussianBlurImageChannel): New function to gaussian blur an image
	channel.
	(UnsharpMaskImageChannel): New function to unsharpmask an image
	channel.
	(SharpenImageChannel): New function to sharpen an image channel.

2008-09-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (MotionBlurImage): Use GetOptimalKernelWidth1D()
	to estimate a reasonable convolution kernel size.  Prepare code
	for OpenMP but don't enable OpenMP until it runs faster.
	(AddNoiseImageChannel): New function to apply noise to a specified
	image channel.

2008-09-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (ConvertImageCommand): Provide 'convert' access
	to MotionBlurImage() via -motion-blur option.
	(MogrifyImageCommand): Provide 'mogrify' access to
	MotionBlurImage() via -motion-blur option.

2008-09-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (SpreadImage): Accelerate using OpenMP.
	* coders/msl.c: Applied MSL patch from graphicsmagick-bugs list to
	correct handling of geometry x,y values by setting gravity
	attribute to ForgetGravity.

2008-09-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (ShadeImage): Accelerate using OpenMP.

2008-09-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (RandomChannelThresholdImage): Accelerate using
	OpenMP.  Support individual thresholding of the color channels.
	(BlurImage): Blur was failing for PseudoClass images.  This bug
	was added on 2008-09-08.
	* magick/pixel_cache.c (AcquireOneCacheViewPixel): New function to
	return just one pixel from a cache view.
