@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2008-09-17  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/command.c (ConvertImageCommand, MogrifyImageComman):
+        Accept -gaussian-blur as a synonym for -gaussian.
+
+</UL>
+<p>
 2008-09-16  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
